# notion_movie_fetcher

./: .dmypy.json  .gitignore  example.json  mypy.ini  pyproject.toml
app/: assemblers.py  constants.py  fetch_from_notion.py  fetchers.py  letterboxd.com_cookies.json  letterboxd.py  movies_2023.py  notion_repository.py  shared.py  utils.py
app/assemblers/: letterboxd_movie_assembler.py
app/interfaces/: notion.py
app/models/: __init__.py  letterboxd.py  models.py
app/utils/: __init__.py  utils.py
data/: movies_2023.json  relevant_streaming_services.json
scripts/: update_movies.sh
tests/unit/interfaces/: test_notion.py
tests/unit/utils/: test_utils.py
