[tool.poetry]
name = "movies"
version = "0.0.1"
description = "An app to fetch watchablity information for an arbitrary list of movies"
authors = ["Mark Reckard <mark.reckard@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
justwatch = "^0.5.1"
shared-items = {git = "ssh://git@github.com/marker004/notion_shared_items.git", tag = "0.0.3" }
pydantic = "^1.10.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"
