[tool.poetry]
name = "movies"
version = "0.0.1"
description = "An app to fetch watchablity information for an arbitrary list of movies"
authors = ["Mark Reckard <mark.reckard@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
justwatch = "^0.5.1"
shared-items = {git = "ssh://git@github.com/marker004/notion_shared_items.git", tag = "0.0.9" }
# shared-items = {path = "../shared-items", develop = true}
pydantic = "^1.10.5"
bs4 = "^0.0.1"
requests = "^2.32.2"
aiohttp = "^3.9.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^24.3.0"
types-beautifulsoup4 = "^4.11.6.7"
types-requests = "^2.28.11.15"
